Infra/devops/argocd/db/minio-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-strip-prefix
  namespace: roundy-app
spec:
  stripPrefix:
    prefixes:
      - /minio
