Infra/devops/argocd/db/minio.yaml
# (API: 8887, Console: 8886)
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: roundy-app
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 8887
      targetPort: 8887
    - name: console
      port: 8886
      targetPort: 8886
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: roundy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
        - server
        - /data
        - --address
        - ":8887"
        - --console-address
        - ":8886"
        ports:
        - containerPort: 8887
        - containerPort: 8886
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-pvc
