Infra/devops/argocd/db/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: roundy-app
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: roundy-app
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        args:
          - --innodb_buffer_pool_size=256M
          - --innodb_log_file_size=64M
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: "800Mi"
            cpu: "500m"
          requests:
            memory: "400Mi"
            cpu: "100m"
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
