Infra/devops/argocd/db/openvidu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openvidu-server
  namespace: roundy-app
  labels:
    app: openvidu
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: openvidu
  template:
    metadata:
      labels:
        app: openvidu
    spec:
      hostNetwork: true
      containers:
      - name: openvidu-container
        image: openvidu/openvidu-dev:latest
        ports:
        - containerPort: 8443
          name: https
        - containerPort: 3478
          protocol: UDP
          name: stun-udp
        - containerPort: 5443
          protocol: TCP
          name: turn-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: openvidu-service
  namespace: roundy-app
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  selector:
    app: openvidu
  ports:
    - name: https # http로 동작
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: stun-udp
      protocol: UDP
      port: 3478
      targetPort: 3478
    - name: turn-tcp
      protocol: TCP
      port: 5443
      targetPort: 5443
  type: ClusterIP
