Infra/devops/argocd/db/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: roundy-app
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: roundy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.2-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data-volume
          mountPath: /data
      volumes:
      - name: redis-data-volume
        persistentVolumeClaim:
          claimName: redis-pvc
