Infra/devops/argocd/db/openvidu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvidu-ingress
  namespace: roundy-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-cert"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: roundy-app-openvidu-strip@kubernetescrd
    traefik.ingress.kubernetes.io/service.serverstransport: kube-system-openvidu-transport@kubernetescrd
spec:
  tls:
    - hosts:
        - i14a701.p.ssafy.io
      secretName: tls-cert
  rules:
    - host: i14a701.p.ssafy.io
      http:
        paths:
          - path: /openvidu
            pathType: Prefix
            backend:
              service:
                name: openvidu-service
                port:
                  number: 8443
